--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,27 +7,13 @@
     <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
 <div class = "container-fluid">
-    <div class="container input-group d-flex justify-content-center" >
-        <nav class="navbar navbar-expand-lg bg-body-tertiary w-25">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        <a class="nav-link" href="/managePizza">Manage-Pizza</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <hr>
+    <div class="container input-group d-flex justify-content-center">
+        <div th:insert="fragment/navbar::navbar"></div>
         <div class="container input-group d-flex justify-content-center" >
             <h1>Hello Pizza</h1>
         </div>
-
     </div>
     <div class="container input-group w-25 d-flex justify-content-center">
         <table class = "table table-striped-columns ">
@@ -37,14 +23,16 @@
                     <th>Ingredients</th>
                     <th>Price</th>
                     <th>Image</th>
+                    <td></td>
                 </tr>
                 </thead>
             <tbody>
             <tr th:each="pizza :${pizzas}">
                 <td th:text="${pizza.name}"></td>
                 <td th:text="${pizza.ingredients}"></td>
-                <td th:text="${pizza.price}"></td>
+                <td th:text="${#numbers.formatDecimal(pizza.price, 1, 2)} + ' CHF'"></td>
                 <td><img th:src="@{/images/{image}(image=${pizza.imageName})}" height="40px"></td>
+                <td><button type="button" class="btn btn-success">Bay</button></td>
             </tr>
             </tbody>
 
