--- a/src/main/resources/templates/manageBeverage.html
+++ b/src/main/resources/templates/manageBeverage.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Beverage</title>
+    <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Beverage</h1>
+<div class = "container-fluid">
+    <div class="container input-group w-25 d-flex justify-content-center" >
+        <div th:insert="fragment/navbar::navbar"></div>
+        <div class="container input-group d-flex justify-content-center" >
+            <h1>Hello Pizza</h1>
+            <form method="post" th:action="@{/addBeverage}" th:object="${beverage}">
+                <div class="input-group mb-3" >
+                    <input required type="text" th:field="*{name}" class="form-control" placeholder="pizza name" aria-label="beverage name" aria-describedby="buttonSubmit">
+                    <input required type="text" th:field="*{price}" class="form-control" placeholder="price" aria-label="price" aria-describedby="buttonSubmit">
+                    <button class="btn btn-success" type="submit" >Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="container input-group w-25 d-flex justify-content-center">
+        <table class = "table table-striped-columns ">
+            <thead class="table-dark">
+            <tr>
+                <th>Beverage Name</th>
+                <th>Price</th>
+                <td></td>
+                <td></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="align-middle" th:each="beverage :${beverages}">
+                <td th:text="${beverage.name}"></td>
+                <td th:text="${#numbers.formatDecimal(beverage.price,0,'COMMA', 2, 'POINT')} + ' CHF'"></td>
+                <td><button type="button" class="btn btn-danger">Delete</button></td>
+                <td><button type="button" class="btn btn-success">Edit</button></td>
+            </tr>
+            </tbody>
+
+        </table>
+    </div>
+</div>
+
+</div>
+<script src="/webjars/bootstrap/5.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
